<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P2D2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timer_val">00:00:00</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="startButtonLabel">Start</string>
    <string name="captureButtonLabel">Capture</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_title">Diagnostic Home</string>
    <string name="calibrateButtonLabel">Step 1: Calibrate</string>
    <string name="testButtonLabel">Step 2: Test</string>
    <string name="bluetoothButtonLabel">Connect to Bluetooth</string>
    <string name="zoom_bar_label">Zoom</string>
    <string name="iso_bar_label">Exposure</string>
    <string name="title_activity_calibrate">CalibrateActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="results_welcome">Please process images on computer, mobile image processing is in the works</string>
    <string name="wb_bar_label">White Balance</string>
    <string name="calibrate_welcome">Let\'s Calibrate the Device!</string>
    <string name="calibrate_screen_text">Calibration Settings</string>
    <string name="led_test_text">Test LEDs</string>
    <string name="pump_test_text">Test Pump</string>
    <string name="heat_test_text">Test Heat</string>
    <string name="valves_test_text">Test Valves</string>
    <string name="calibrate_button_text">Test All</string>
    <string name="title_activity_calibrate_screen">Calibration Settings</string>
    <string name="home_instruction_title">Calibrate the Device</string>
    <string name="home_instruction_text">On the next screen please select "Calibrate" to calibrate the device components.
        This step is necessary before the test can begin.</string>
    <string name="test_instruction_title">Calibrate the Camera</string>
    <string name="test_instruction_text">Adjust the camera parameters to best view the channels. Make sure they occupy a large part of the image. 
        Next, please calibrate the image capture algorithm by tapping the top, middle, and bottom of each channel. If the channels are 
        higlighted correctly, press "Start" </string>
    <string name="cal_check_title">How does it look?</string>
    <string name="cal_check_text">If the channels are highlighted, press "looks good". If not, please press "try again".</string>
    <string name="pos_result_instruction_title">Result: Positive</string>
    <string name="neg_result_instruction_title">Result: Negative</string>
    <string name="result_instruction_text">Please have the final graph reviewed by a profession to verify the results </string>
    <string name="error_instruction_title">Oops. Something went wrong</string>
    <string name="error_instruction_text">We are not sure which instruction step you are at. Please start over. </string>
    <string name="actuation_instruction_title">Please wait...</string>
    <string name="actuation_instruction_text">Fluid actuation in process, the test will begin shortly.</string>
    
    <string name="graph_text">Graph goes here</string>
    <string name="test_text">Test goes here</string>
    <string name="log_text">Logs go here</string>
    <string name="title_tab_activity">TestTabActivity</string>

    <!-- Bluetooth broadcast strings -->
    <string name="bt_disconnect_broadcast">DISCONNECT</string>
    <string name="bt_data_type">TYPE</string>
    <string name="bt_temp_data">TEMP DATA</string>
    <string name="bt_led_state">LED STATE</string>
    <string name="bt_heating_state">HEATING STATE</string>
    <string name="bt_fluid_state">FLUID STATE</string>
    <string name="bt_error">ERROR</string>
    <string name="bt_data_1">DATA 1</string>
    <string name="bt_data_2">DATA 2</string>

    <!-- Other Bluetooth-related strings -->
    <string name="bluetooth_menu_label">Select a device</string>
    <string name="no_bluetooth">Device incompatible (Bluetooth unsupported)</string>
     <string name="bt_unavailable_dialog_title">"No Bluetooth Connection"</string>
    <string name="bt_unavailable_dialog_text">"Bluetooth is disabled or not available on this device, so this part of the app is unavailable"</string>
    <string name="battery_low_title">"Battery Low"</string>
    <string name="battery_low_text">"The device battery is too low to continue. The lights, pump, and heater have been shut off. Please disconnect the battery."</string>
    

</resources>

