<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" 
    android:layout_gravity="center"
    >
    
    <FrameLayout 
        android:id="@+id/camera_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        
    </FrameLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
	    <TextView 
	        android:id="@+id/zoom_bar_label"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
        	android:textSize="20sp"
        	android:text="@string/zoom_bar_label" />
	    
	    <SeekBar
	        android:id="@+id/seekbar_zoom"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:max="30" />
	    
    </LinearLayout>
    
	<LinearLayout
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal" >
	        
		    <TextView 
		        android:id="@+id/iso_bar_label"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="center"
	        	android:textSize="20sp"
	        	android:text="@string/iso_bar_label" />
		    
		    <SeekBar
		        android:id="@+id/seekbar_iso"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:max="5" />
		    
	    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
	
	    <Button
	        android:id="@+id/button_start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/startButtonLabel"
	        android:layout_gravity="center"
	        android:layout_weight="0" />
	    
	    <Button 
	        android:id="@+id/button_stop"
	        android:text="@string/stopButtonLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="0"/>
	    
	    <Button 
	        android:id="@+id/button_capture"
	        android:text="@string/captureButtonLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="0" />
	    
	</LinearLayout>
    
    <TextView
        android:id="@+id/timer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/timer_val"
        android:keepScreenOn="true"
         />

</LinearLayout>
