<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <edu.upenn.seas.senior_design.p2d2.CustomView
        android:id="@+id/test_activity_java_surface_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.55" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/zoom_bar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zoom_bar_label"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekbar_zoom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/iso_bar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/iso_bar_label"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekbar_iso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/wb_bar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wb_bar_label"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekbar_wb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/startButtonLabel" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/stopButtonLabel" />
        
<!--  
        <Button
            android:id="@+id/button_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/captureButtonLabel" />
-->
    </LinearLayout>
    <TextView
        android:id="@+id/timer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:keepScreenOn="true"
        android:text="@string/timer_val"
        android:textSize="40sp" />

</LinearLayout>